# FireBridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/src/: SerialMonitor.h  application.h  configini.embed  main.cpp  setup.cpp  ui.cpp
